# aisona

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Makefile  README.md  compose.yaml  pyproject.toml  report.md
apps/api/: Dockerfile  pyproject.toml
apps/api/src/carecall_api/: access_control.py  config.py  data_loader.py  lifespan.py  main.py  retrieval.py  schemas.py
apps/api/src/carecall_api/middleware/: __init__.py  request_context.py
apps/api/src/carecall_api/routes/: audit.py  briefs.py  calls.py  feedback.py  health.py  ingestion.py  metrics.py  patient_patterns.py  patient_timeline.py  patients.py  person_mentions.py  questions.py  retrieval_lab.py  safety.py  tasks.py
apps/api/tests/: test_access_control.py  test_access_control_api.py  test_answerability_gate.py  test_api.py  test_audit.py  test_brief_generation.py  test_briefs.py  test_characterization.py  test_compare_retrieval_modes.py  test_feedback.py  test_grounding_adversarial.py  test_ingestion.py  test_patient_patterns.py  test_patient_timeline.py  test_patients_and_safety.py  test_pattern_detection.py  test_person_mention_extraction.py  test_person_mentions.py  test_question_redaction.py  test_reranking.py  test_retrieval.py  test_retrieval_lab.py  test_streaming.py  test_task_domain_logic.py  test_tasks.py  test_timeline_extraction.py
apps/worker/: Dockerfile  pyproject.toml
apps/worker/src/carecall_worker/: embeddings.py  main.py
apps/worker/tests/: test_backfill.py  test_embeddings.py
backend/: requirements.txt
data/: carecall_questions.json
frontend/: index.html  package.json  tsconfig.json  tsconfig.node.json
scripts/: evaluate.py  evaluate_grounding.py  evaluate_retrieval.py  ingest_fixture_data.py  prompt_eval.py  (+2 more)
(+156 files in other folders)
