[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "carecall-api"
version = "0.1.0"
description = "CareCall Insight FastAPI delivery layer"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.0",
  "carecall-domain",
  "carecall-application",
  "carecall-retrieval",
  "carecall-llm",
  "carecall-persistence",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "httpx>=0.27.0"]
postgres = ["carecall-persistence[postgres]"]

[tool.setuptools.packages.find]
where = ["src"]
