[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "carecall-worker"
version = "0.1.0"
description = "CareCall Insight background worker: embedding backfill over a polled PostgreSQL queue"
requires-python = ">=3.11"
dependencies = [
  "carecall-domain",
  "carecall-persistence[postgres]",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.setuptools.packages.find]
where = ["src"]
